<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/restaurant_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/com_facebook_button_icon_blue"/>

            <!--android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" /-->
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Restaurant name"
                    android:textSize="18sp"
                    android:textColor="#fff"/>

                <TextView
                    android:id="@+id/restaurant_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Desc and address"
                    android:textColor="#fff"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_call"
                    android:drawableTop="@drawable/ic_call_black"
                    style="@style/Widget.AppCompat.Button.Borderless" />
                <Button
                    android:id="@+id/button_like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_like"
                    android:drawableTop="@drawable/ic_star_rate_black"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
                <Button
                    android:id="@+id/button_website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_website"
                    android:drawableTop="@drawable/ic_web_black"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>
            <TextView
                android:id="@+id/text_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/no_workmate"/>
            <ListView
                android:id="@+id/list_workmates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_done_white"/>
</android.support.design.widget.CoordinatorLayout>